changes to portfolio.html

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
               <!-- row one -->
               <div class="row">
                   <!-- Navbar -->
-                  <nav class="navbar clearfix col-12">
+                  <nav class="navbar clearfix col-12 fixed-top">
                     <div class="headername">
                       <a class="navbar-brand float-left col-3" href="#">Matthew Yokopovich</a>
                     </div>
@@ -27,13 +27,18 @@
                         </ul>
                     </nav>
                   </div>
-                         <!-- end row1 -->
-
-                      <footer class="footer mt-auto py-3 justify-content-center">
-                        <div class="container">
-                          <span class="text-muted">Copyright</span>
-                        </div>
-                      </footer>
+                    <!-- end row1 -->
+                    <!-- row2 -->
+                  <div class="row">
+                    <h1>
+                      Contact Me
+                    </h1>
+                  </div>
+                         <footer class="footer mt-auto py-3">
+                                <div class="container text-center">
+                                   <span>Copyright ©</span>
+                                </div>
+                              </footer>
     </body>
     <!-- end body container -->
 </html>
