--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
               <!-- row one -->
               <div class="row">
                   <!-- Navbar -->
-                  <nav class="navbar clearfix col-12">
+                  <nav class="navbar clearfix col-12 fixed-top">
                     <div class="headername">
-                      <a class="navbar-brand float-left col-3" href="#">Matthew Yokopovich</a>
+                      <a class="navbar-brand col-3 float-left" href="#">Matthew Yokopovich</a>
                     </div>
                       <ul class="nav justify-content-end">
                           <li class="nav-item">
@@ -28,26 +28,37 @@
                     </nav>
                   </div>
                          <!-- end row1 -->
-                  <div class="row">
-                      <h1>
+                         <!-- row2 -->
+                <div class="aboutbody">
+                 <div class="row ml-3">
+                      <h3>
                          About Me
-                     </h1>
+                     </h3>
                     </div>
-                  <div class="row aboutbody clearfix">
-                    <img src="https://source.unsplash.com/random/400x400" alt="" class="float-left img-fluid">
-                    <p class="float-left">
+                    <!-- row3 -->
+                <div class="row clearfix">
+                    <div class="col-md-12">
+                      <div class="pull-left">
+                         <img src="https://source.unsplash.com/random/400x400" alt="" class="float-left img-fluid">
+                        </div>
+                     <div class="pull-left">
                         Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
                         Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.
-                      </p>
+                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
+                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
+                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
+                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
+                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>'['
+                     </div>
                     
-                      
+                    </div>
                   </div>
+                </div>
 
 
-                   <footer class="footer mt-auto py-3 justify-content-center">
-                      <div class="container">
-                         <span class="text-muted">Copyright</span>
+                   <footer class="footer mt-auto py-3">
+                      <div class="container text-center">
+                         <span>Copyright ©</span>
                       </div>
                     </footer>
               </div>
