--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
               <!-- row one -->
               <div class="row">
                   <!-- Navbar -->
-                  <nav class="navbar clearfix col-12">
+                  <nav class="navbar clearfix col-12 fixed-top">
                     <div class="headername">
                       <a class="navbar-brand float-left col-3" href="#">Matthew Yokopovich</a>
                     </div>
@@ -27,13 +27,48 @@
                         </ul>
                     </nav>
                   </div>
-                         <!-- end row1 -->
-
-                      <footer class="footer mt-auto py-3 justify-content-center">
-                        <div class="container">
-                          <span class="text-muted">Copyright</span>
+                  <!-- end row1 -->
+                  <!-- aboutbody -->
+                  <div class="aboutbody">
+                    <!-- row2 -->
+                    <div class="row ml-3">
+                      <h3>Portfolio</h3>
+                    </div>
+                    <!-- end row2 -->
+                    <!-- row3 -->
+                    <div class="row">
+                      <div class="col">
+                        <img src="images/port1.jpg" alt="" class="img-fluid">
+                      </div>
+                      <div class="col">
+                        <img src="images/port2.jpg" alt="" class="img-fluid">
                         </div>
-                      </footer>
+                    </div>
+                    <!-- end row3 -->
+                    <!-- row4 -->
+                    <div class="row">
+                      <div class="col">
+                          <img src="images/port3.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="col">
+                          <img src="images/port4.jpg" alt="" class="img-fluid">
+                          </div>
+                    </div>
+                    <!-- end row4 -->
+                    <!-- row5 -->
+                    <div class="row">
+                        <div class="col">
+                            <img src="images/port5.jpg" alt="" class="img-fluid">
+                          </div>
+                    </div>
+                    <!-- end row5 -->
+                  </div>
+                  <!-- end aboutbody -->
+                         <footer class="footer mt-auto py-3">
+                                <div class="container text-center">
+                                   <span>Copyright ©</span>
+                                </div>
+                              </footer>
     </body>
     <!-- end body container -->
 </html>
