work on contact.html

--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,36 @@
                     </nav>
                   </div>
                     <!-- end row1 -->
+                    <!-- aboutbody -->
+                  <div class="aboutbody">
                     <!-- row2 -->
-                  <div class="row">
-                    <h1>
-                      Contact Me
-                    </h1>
+                    <div class="row ml-3">
+                      <h3>
+                        Contact Me
+                      </h3>
+                      <hr>
+                    </div>
+                    <!-- end row2 -->
+                    <!-- row3 -->
+                    <div class="row">
+                      <ul>
+                        <li>
+                          Name
+                        </li>
+                        <input class="form-control" type="text" placeholder="Your Name">
+                        <li>
+                          Email
+                        </li>
+                        <input class="form-control" type="text" placeholder="Your Email">
+                        <li>
+                          Message
+                        </li>
+                        <div class="form-group">
+                            <label for="comment">Comment:</label>
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                          </div>
+                      </ul>
+                    </div>
                   </div>
                          <footer class="footer mt-auto py-3">
                                 <div class="container text-center">
