added a link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,8 @@
                         <img src="images/tf2background.jpg" alt="" class="img-fluid"></a>
                       </div>
                       <div class="col">
-                        <img src="images/port2.jpg" alt="" class="img-fluid">
+                        <a href="https://matthewyokopovich.github.io/Triva-game/">Music Trivia Game
+                        <img src="images/port2.jpg" alt="" class="img-fluid"></a>
                         </div>
                     </div>
                     <!-- end row3 -->
