added a link to my Giphy App on portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,8 @@
                     <!-- row4 -->
                     <div class="row">
                       <div class="col">
-                          <img src="images/port3.jpg" alt="" class="img-fluid">
+                          <a href="https://matthewyokopovich.github.io/GiphyApp/">Giphy App
+                          <img src="images/port3.jpg" alt="" class="img-fluid"></a>
                         </div>
                         <div class="col">
                           <img src="images/port4.jpg" alt="" class="img-fluid">
