added a link in portfolio.html to multiplayer RPS

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,8 @@
                           <a href="https://matthewyokopovich.github.io/GiphyApp/">Giphy App
                           <img src="images/port3.jpg" alt="" class="img-fluid"></a>
                         </div>
-                        <div class="col">
-                          <img src="images/port4.jpg" alt="" class="img-fluid">
+                        <div class="col"><a href="https://matthewyokopovich.github.io/firebase-rps/">Multiplayer RPS
+                          <img src="images/port4.jpg" alt="" class="img-fluid"></a>
                           </div>
                     </div>
                     <!-- end row4 -->
