--- a/contact.html
+++ b/contact.html
@@ -39,25 +39,10 @@
                     </div>
                     <!-- end row2 -->
                     <!-- row3 -->
-                    <div class="row">
-                      <ul>
-                        <li>
-                          Name
-                        </li>
-                        <input class="form-control" type="text" placeholder="Your Name">
-                        <li>
-                          Email
-                        </li>
-                        <input class="form-control" type="text" placeholder="Your Email">
-                        <li>
-                          Message
-                        </li>
-                        <div class="form-group">
-                            <label for="comment">Comment:</label>
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
-                          </div>
-                      </ul>
-                    </div>
+                    <div class="row contact-entry"><a href="https://github.com/MatthewYokopovich"><p>My Github Page</p></a> </div>
+                    <div class="row contact-entry"><a href="https://www.linkedin.com/in/matthew-yokopovich-86a095104/"><p>My Linkedin Page</p></a><br></div>
+                    <div class="row contact-entry"><a href="mailto:matthew.yokopovich@gmail.com"><p>My Email: Matthew.yokopovich@gmail.com</p></a><br></div>
+                    <div class="row contact-entry"><p>My Phone #: 832-528-1430</p></div>
                   </div>
                          <footer class="footer mt-auto py-3">
                                 <div class="container text-center">
