--- a/index.html
+++ b/index.html
@@ -39,16 +39,11 @@
                 <div class="row clearfix">
                     <div class="col-md-12">
                       <div class="pull-left">
-                         <img src="https://source.unsplash.com/random/400x400" alt="" class="float-left img-fluid">
+                         <img src="./images/under-construction.jpg" alt="" class="float-left img-fluid">
+                         <p>UNDER CONSTRUCTION</p>
                         </div>
                      <div class="pull-left">
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
-                        Lorem ipsum dolor amet pour-over etsy small batch chambray. Health goth woke mumblecore pickled craft beer vinyl paleo air plant, single-origin coffee cloud bread butcher tumeric banh mi humblebrag cornhole. Single-origin coffee prism fingerstache la croix gentrify freegan glossier austin salvia chillwave slow-carb. Fixie yr pop-up blog, vice keffiyeh la croix selfies everyday carry helvetica shoreditch photo booth etsy hella small batch.<br>
+
                      </div>
                     
                     </div>
