--- a/portfolio.html
+++ b/portfolio.html
@@ -1,77 +1,88 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-            <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-            <!-- body container -->
-            <div class="container">
-              <!-- row one -->
-              <div class="row">
-                  <!-- Navbar -->
-                  <nav class="navbar clearfix col-12 fixed-top">
-                    <div class="headername">
-                      <a class="navbar-brand float-left col-3" href="#">Matthew Yokopovich</a>
-                    </div>
-                      <ul class="nav justify-content-end">
-                          <li class="nav-item">
-                            <a class="nav-link active" href="index.html">About</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                          </li>
-                        </ul>
-                    </nav>
-                  </div>
-                  <!-- end row1 -->
-                  <!-- aboutbody -->
-                  <div class="aboutbody">
-                    <!-- row2 -->
-                    <div class="row ml-3">
-                      <h3>Portfolio</h3>
-                    </div>
-                    <!-- end row2 -->
-                    <!-- row3 -->
-                    <div class="row">
-                      <div class="col">
-                        <a href="https://matthewyokopovich.github.io/unit-4-game/">TF2 RPG Game
-                        <img src="images/tf2background.jpg" alt="" class="img-fluid"></a>
-                      </div>
-                      <div class="col">
-                        <a href="https://matthewyokopovich.github.io/Triva-game/">Music Trivia Game
-                        <img src="images/port2.jpg" alt="" class="img-fluid"></a>
-                        </div>
-                    </div>
-                    <!-- end row3 -->
-                    <!-- row4 -->
-                    <div class="row">
-                      <div class="col">
-                          <a href="https://matthewyokopovich.github.io/GiphyApp/">Giphy App
-                          <img src="images/port3.jpg" alt="" class="img-fluid"></a>
-                        </div>
-                        <div class="col"><a href="https://matthewyokopovich.github.io/firebase-rps/">Multiplayer RPS
-                          <img src="images/port4.jpg" alt="" class="img-fluid"></a>
-                          </div>
-                    </div>
-                    <!-- end row4 -->
-                    <!-- row5 -->
-                    <div class="row">
-                        <div class="col">
-                            <img src="images/port5.jpg" alt="" class="img-fluid">
-                          </div>
-                    </div>
-                    <!-- end row5 -->
-                  </div>
-                  <!-- end aboutbody -->
-                         <footer class="footer mt-auto py-3">
-                                <div class="container text-center">
-                                   <span>Copyright ©</span>
-                                </div>
-                              </footer>
-    </body>
-    <!-- end body container -->
+
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <!-- body container -->
+  <div class="container">
+    <!-- row one -->
+    <div class="row">
+      <!-- Navbar -->
+      <nav class="navbar clearfix col-12 fixed-top">
+        <div class="headername">
+          <a class="navbar-brand float-left col-3" href="#">Matthew Yokopovich</a>
+        </div>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- end row1 -->
+    <!-- aboutbody -->
+    <div class="aboutbody">
+      <!-- row2 -->
+      <div class="row ml-3">
+        <h3>Portfolio</h3>
+      </div>
+      <!-- end row2 -->
+      <!-- row3 -->
+      <div class="row">
+        <div class="card">
+          <a href="https://matthewyokopovich.github.io/unit-4-game/"><p>TF2 RPG Game</p>
+            <img src="images/tf2background.jpg" alt="" class="img-fluid"></a>
+          <a href="https://github.com/MatthewYokopovich/unit-4-game"><p>Github Repo</p></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="card">
+          <a href="https://matthewyokopovich.github.io/Triva-game/"><p>Music Trivia Game</p>
+            <img src="images/port2.jpg" alt="" class="img-fluid"></a>
+          <a href="https://github.com/MatthewYokopovich/Triva-game"><p>Github Repo</p></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="card">
+          <a href="https://matthewyokopovich.github.io/GiphyApp/"><p>Giphy App</p>
+            <img src="images/giphy_logo.png" alt="Giphy Logo" class="img-fluid"></a>
+            <a href="https://github.com/MatthewYokopovich/GiphyApp"><p>Github Repo</p></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="card">
+        <a href="https://matthewyokopovich.github.io/firebase-rps/"><p>Multiplayer RPS</p>
+          <img src="images/port4.jpg" alt="" class="img-fluid"></a>
+          <a href="https://github.com/MatthewYokopovich/firebase-rps">Github Repo</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="card">
+        <a href="https://the-ryan-mobley.github.io/team-thor-project1/">
+        <img src="images/moon.png" alt="Moon Image" class="img-fluid"><p>STRGZR App</p></a>
+      <a href="https://github.com/The-Ryan-Mobley/team-thor-project1/">Github Repo</a>
+      </div>
+    </div>
+    <!-- end row5 -->
+  </div>
+  <!-- end aboutbody -->
+  <footer class="footer mt-auto py-3">
+    <div class="container text-center">
+      <span>Copyright ©</span>
+    </div>
+  </footer>
+</body>
+<!-- end body container -->
+
 </html>
