added bamazon to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,13 @@
       <a href="https://github.com/The-Ryan-Mobley/team-thor-project1/">Github Repo</a>
       </div>
     </div>
+    <div class="row">
+      <div class="card">
+        <a href="https://github.com/MatthewYokopovich/bamazonCRUD">
+        <img src="https://raw.githubusercontent.com/MatthewYokopovich/bamazonCRUD/master/ScreenShots/SS1.png" alt="CLI Image" class="img-fluid"><p>Bamazon CLI</p></a>
+Github Repo</a>
+      </div>
+    </div>
     <!-- end row5 -->
   </div>
   <!-- end aboutbody -->
