fixed link to eat-da-burger

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@ Github Repo</a>
     <div class="row">
       <div class="card">
         <a href="https://protected-garden-39844.herokuapp.com/">
-        <img src="images/burger.png" alt="Burger Image" class="img-fluid"><p>Eat-Da-Burger</p></a>
+        <img src="images/burger.jpg" alt="Burger Image" class="img-fluid"><p>Eat-Da-Burger</p></a>
       </div>
     </div>
     <!-- end row5 -->
