--- a/portfolio.html
+++ b/portfolio.html
@@ -78,19 +78,28 @@
       <div class="card">
         <a href="https://github.com/MatthewYokopovich/bamazonCRUD">
         <img src="https://raw.githubusercontent.com/MatthewYokopovich/bamazonCRUD/master/ScreenShots/SS1.png" alt="CLI Image" class="img-fluid"><p>Bamazon CLI</p></a>
-Github Repo</a>
+<a href="https://github.com/MatthewYokopovich/bamazonCRUD">  Github Repo</a>
       </div>
     </div>
     <div class="row">
       <div class="card">
         <a href="https://ancient-bastion-94260.herokuapp.com/">
         <img src="images/FF.png" alt="Friend Finder Image" class="img-fluid"><p>Friend Finder</p></a>
+        <a href="https://github.com/MatthewYokopovich/FriendFinder">  Github Repo</a>
       </div>
     </div>
     <div class="row">
       <div class="card">
         <a href="https://protected-garden-39844.herokuapp.com/">
         <img src="images/burger.jpg" alt="Burger Image" class="img-fluid"><p>Eat-Da-Burger</p></a>
+        <a href="https://github.com/MatthewYokopovich/eat-da-burger">  Github Repo</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="card">
+        <a href="https://gentle-plateau-65382.herokuapp.com/">
+        <img src="images/reddit.png" alt="Reddit Image" class="img-fluid"><p>Reddit Scraper</p></a>
+        <a href="https://github.com/MatthewYokopovich/redditScrape">  Github Repo</a>
       </div>
     </div>
     <!-- end row5 -->
