change to server(hopefully no functionality change)

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       <!-- Navbar -->
       <nav class="navbar clearfix col-12 fixed-top">
         <div class="headername">
-          <a class="navbar-brand float-left col-3" href="#">Matthew Yokopovich</a>
+          <a class="navbar-brand float-left col-3" href="index.html">Matthew Yokopovich</a>
         </div>
         <ul class="nav justify-content-end">
           <li class="nav-item">
